test_translator/tests/data/checkpoint_2/core/pass/80_abs_diff_lt/tests.py
assert abs(calculate() - 5.0) < 0.1
