test_translator/tests/data/checkpoint_2/core/fail/80_abs_diff_lt/solution.py
def calculate():
    return 5.2  # abs(5.2 - 5.0) = 0.2 >= 0.1
